<resources>
    <string-array name="Sp_select">
        <item>users</item>
        <item>seller</item>
    </string-array>
    <string-array name="Sp_Product">
        <item> Offer</item>
        <item> Add More Product</item>
        <item> No Product Added</item>
        <item> Add Account</item>
    </string-array>
    <string name="app_name">LocalzeAdmin</string>
    <string name="dashboard">Dashboard</string>
    <string name="Profile">Profile</string>
    <string name="Favourites">Favourites</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="about_app">About App</string>
    <string name="shop_name">SHOP NAME</string>
    <string name="welcome">Welcome!  </string>
    <string name="share_link_on_social_media">!Share link on Social Media</string>
    <string name="www_localze_com">www.localze.com</string>
    <string name="orders">ORDERS</string>
    <string name="accepted">Accepted</string>
    <string name="shipped">Out For Delivery</string>
    <string name="active">Completed</string>
    <string name="pending">Pending</string>
    <string name="overview">OVERVIEW</string>
    <string name="connect_with_your_customer_for_visit_your_online_store_easly">Connect with your customer to visit your online store easily!</string>
    <string name="title_activity_maps__new">Map</string>
    <string name="FCM_KEY">AAAA0TgW0AY:APA91bGNGMLtISkxVjfP-Mvu6GCZeeTcoDzvFtUg0Pq1SrJ9SshsFXDuXR9i3-lOqtlUjVmGqmv4C0sSRbsIphiacRau5c1ERQEUBukLxV-EXGVGv1ZmTN796LyLs1Wd7s1Tnu60e_2D</string>
    <string name="FCM_TOPIC">PUSH_NOTIFICATIONS</string>
    <string name="space"> </string>
    <string name="log_out">LOG OUT</string>
    <string name="store_status">Store Status :</string>
    <string name="open">OPEN</string>
    <string name="delivery">Delivery :</string>
    <string name="available">AVAILABLE</string>
    <string name="product_details">PRODUCT DETAILS</string>
    <string name="add_product_images">Add product images*</string>
    <string name="product_name">Product Name*</string>
    <string name="product_discription_optional">Product Discription (optional)</string>
    <string name="choose_category">Choose Category</string>
    <string name="mrp">MRP*</string>
    <string name="selling_price">Selling Price*</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="quantity">Quantity</string>
    <string name="size">Size</string>
    <string name="example_xs_s_m_l">Example: XS,S,M,L…</string>
    <string name="boost_your_shop">Boost Your Shop</string>
    <string name="share_your_shop">Share Your Shop</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="shop_banner">Shop Banner</string>
    <string name="shop_overview">Shop Overview</string>
    <string name="stock_in">Stock: IN</string>
    <string name="rs_699">Rs. 699</string>
    <string name="rs_1099">Rs. 1099</string>
    <string name="_4_5_5">4.5/5</string>
    <string name="continue_1">Continue</string>
    <string name="no_item_in_your_cart">No Item in your cart !</string>
    <string name="shop_now">Shop Now</string>
    <string name="total_item_9">Total Item :- 9</string>
    <string name="price_details">Price Details</string>
    <string name="price_1_item">Price(1 item)</string>
    <string name="rs_600">Rs.600</string>
    <string name="discount">Discount</string>
    <string name="rs_80">- Rs.80</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="rs_10">Rs.10</string>
    <string name="saraibika">Saraibika</string>
    <string name="_21_mins">21 mins</string>
    <string name="deliver_to_home">Deliver to Home</string>
    <string name="change_address">CHANGE ADDRESS</string>
    <string name="total_amount">Total Amount</string>
    <string name="cart_orders">Cart Orders</string>
    <string name="list_orders">List Orders</string>
    <string name="shop_menu_card">Shop Menu Card</string>
    <string name="cupcakes_menu">Cupcakes Menu</string>
    <string name="save_as_pdf">Save As Pdf</string>
    <string name="shop_category">Shop Category</string>
    <string name="add_new_category">Add New Category</string>
    <string name="oh_no">Oh No..</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_connect_to_internet">Please connect to internet</string>
    <string name="retry">Retry</string>
    <string name="pay_on_delivery">Pay on Delivery</string>
    <string name="pay_with_paytm">Pay with Paytm</string>
    <string name="price_summary">Price Summary</string>
    <string name="product_charges">Product Charges</string>
    <string name="rs_14_999">Rs. 14,999</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="free">FREE</string>
    <string name="total">Total</string>
    <string name="safe_and_secure_payments_100_authentic_products">Safe and Secure Payments. 100% Authentic products</string>
    <string name="rextry">Rextry</string>
    <string name="continue_payment">Continue Payment</string>
    <string name="as_seller">As Seller</string>
    <string name="as_customer">As Customer</string>
    <string name="pay_with_razor_pay">Pay with Razor Pay</string>
    <string name="rs_350">Rs. 350</string>
    <string name="create_your_list">Create Your List</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="cupcakes">Cupcakes</string>
    <string name="scan_to_order">Scan to order</string>
    <string name="scan_using_localze_mobile_app">Scan using localze mobile app</string>
    <string name="save_qr">Save QR</string>
    <string name="welcome_to_localze">Welcome to Localze !</string>
    <string name="all">All</string>
    <string name="grocery">Grocery</string>
    <string name="food">Food</string>
    <string name="electronics">Electronics</string>
    <string name="fashion">Fashion</string>
    <string name="mobiles">Mobiles</string>
    <string name="home">Home</string>
    <string name="beauty">Beauty</string>
    <string name="appliances">Appliances</string>
    <string name="toys_amp_kids"><![CDATA[Toys & Kids]]></string>
    <string name="sports">Sports</string>
    <string name="books">Books</string>
    <string name="automobiles">Automobiles</string>
    <string name="fitness">Fitness</string>
    <string name="healthcare">Healthcare</string>
    <string name="travel">Travel</string>
    <string name="gaming">Gaming</string>
    <string name="others">Others</string>
    <string name="sorry_no_shops_found_in_your_city">Sorry! No shops found in your city</string>
    <string name="_0">0</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="total_orders">Total Orders</string>
    <string name="total_income">Total Income</string>
    <string name="store_views">Store Views</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="order_details">Order Details</string>
    <string name="order_id">Order Id :</string>
    <string name="_123456">#123456</string>
    <string name="date">Date :</string>
    <string name="_27_02_2020_9_45_pm">27/02/2020, 9:45 PM</string>
    <string name="order_status">Order Status :</string>
    <string name="items">Items :</string>
    <string name="_9">9</string>
    <string name="amount">Amount :</string>
    <string name="rs_1_209">Rs. 1,209/-</string>
    <string name="delivery_address">Delivery Address :</string>
    <string name="saraibika_jaunpur_up_222202">Saraibika, Jaunpur UP - 222202</string>
    <string name="contact_customer">Contact customer :</string>
    <string name="call_now">(Call Now)</string>
    <string name="ordered_items">Ordered Items</string>
    <string name="rs_53">Rs.53</string>
    <string name="accept_and_confirm">Accept and Send Bill</string>
    <string name="no_orders_yet">No orders yet!</string>
    <string name="login_or_sign_up_with_your_mobile_number">Login or Sign Up with your Mobile number</string>
    <string name="login_sign_up">Login | Sign Up</string>
    <string name="manage_addresses">MANAGE ADDRESSES</string>
    <string name="current_address">Current Address</string>
    <string name="mohan_chauraha_saraivika_jaunpur_up_222202_india">Mohan chauraha, Saraivika, Jaunpur UP - 222202 India</string>
    <string name="mobile_7518894470">Mobile - 7518894470</string>
    <string name="delete">DELETE</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="gorakhpur">Gorakhpur</string>
    <string name="haraya">Haraya,</string>
    <string name="uttar_pradesh">Uttar Pradesh</string>
    <string name="gorakhpur_1">(Gorakhpur),</string>
    <string name="thank_you_for_shopping">Thank You For Shopping !</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="your_order_has_been_successfully_placed">Your Order has been Successfully Placed</string>
    <string name="no_orders_out_for_delivery_yet">No orders out for delivery yet!</string>
    <string name="accepted_orders">Accepted Orders</string>
    <string name="no_orders_accepted_yet">No orders accepted yet!</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="no_orders_completed_yet">No orders completed yet!</string>
    <string name="in_progress">In Progress</string>
    <string name="abc_shop">ABC Shop</string>
    <string name="shop_address">Shop Address :</string>
    <string name="completed">Completed</string>
    <string name="past_orders">Past Orders</string>
    <string name="no_past_orders_yet">No past orders yet!</string>
    <string name="payment">PAYMENT</string>
    <string name="shop">Shop</string>
    <string name="digital_electronics">Digital Electronics</string>
    <string name="upi">UPI</string>
    <string name="katappamama_paytm">katappamama@paytm</string>
    <string name="message">Message</string>
    <string name="paymet_for_localze">Paymet for Localze</string>
    <string name="rs_199">Rs. 199/-</string>
    <string name="rs_40">Rs. 40/-</string>
    <string name="total_amount_1">Total Amount :</string>
    <string name="rs_239_00">Rs. 239.00</string>
    <string name="pay_now">PAY NOW</string>
    <string name="your_details">Your Details</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="name">Name*</string>
    <string name="age_should_be_greater_or_equal_to_18">Age should be greater or equal to 18</string>
    <string name="age">Age*</string>
    <string name="enter_your_permanent_address">Enter Your Permanent Address</string>
    <string name="permanent_address">Permanent Address*</string>
    <string name="enter_your_temporary_address">Enter Your Temporary Address</string>
    <string name="temporary_address">Temporary Address</string>
    <string name="enter_your_alternative_mobile_no">Enter Your Alternative Mobile No</string>
    <string name="alternate_mobile_no">Alternate Mobile No*</string>
    <string name="register_as_customer">Register as Customer</string>
    <string name="register_as_seller">Register as Seller</string>
    <string name="search">Search…</string>
    <string name="shops">Shops</string>
    <string name="locality">Locality</string>
    <string name="product">Product</string>
    <string name="locality2">Locality2</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="click_button_to_add_your_products">Click + button to add your products</string>
    <string name="products">PRODUCTS</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="no_orders_pending_yet">No orders pending yet!</string>
    <string name="add_shop_image_optional">Add shop image (optional)</string>
    <string name="choose_shop_category">Choose shop category</string>
    <string name="todo">TODO</string>
</resources>