<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellerListOrderDetails">
    <RelativeLayout
        android:id="@+id/rl_ListSeller"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/rl_ListOrderDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_4sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgBackListOrderDetails"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/txtCO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:layout_toEndOf="@id/imgBackListOrderDetails"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/order_details"
                    android:textColor="#000000"
                    android:textSize="@dimen/_13ssp"
                    tools:ignore="RelativeOverlap" />


                <View
                    android:id="@id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/imgBackListOrderDetails"
                    android:background="#d3d3d3" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="3dp"
                app:contentPadding="5dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/order_id"
                            android:textColor="#000000"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/txtListOrderId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/_123456"
                            android:textColor="#000000"
                            android:textSize="@dimen/_11ssp" />


                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/date"
                            android:textColor="#000000"
                            android:textSize="@dimen/_11ssp" />

                        <TextView
                            android:id="@+id/txtListOrderDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/_27_02_2020_9_45_pm"
                            android:textSize="@dimen/_10ssp" />


                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/order_status"
                            android:textColor="#000000"
                            android:textSize="@dimen/_11ssp" />


                        <TextView
                            android:id="@+id/txtListOrderStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/pending"
                            android:textColor="#de4500"
                            android:textSize="@dimen/_10ssp" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/items"
                            android:textColor="#000000"
                            android:textSize="@dimen/_11ssp" />

                        <TextView
                            android:id="@+id/txtListItems"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/_9"
                            android:textSize="@dimen/_10ssp" />


                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/amount"
                            android:textColor="#000000"
                            android:textSize="@dimen/_11ssp" />

                        <TextView
                            android:id="@+id/txtListOrderCost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/rs_1_209"
                            android:textColor="#008000"
                            android:textSize="@dimen/_12ssp" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="Delivery Fee :"
                            android:textColor="#000000"
                            android:textSize="@dimen/_11ssp" />

                        <TextView
                            android:id="@+id/deliverySellerCharge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:textColor="#000000"
                            android:textSize="@dimen/_11ssp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="Payment Status :"
                            android:textColor="#000000"
                            android:textSize="@dimen/_11ssp" />

                        <TextView
                            android:id="@+id/paymentStatusSeller"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="Unpaid"
                            android:textColor="#000000"
                            android:textSize="@dimen/_11ssp" />

                    </TableRow>


                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/contact_customer"
                            android:textColor="#000000"
                            android:textSize="@dimen/_11ssp"

                            />

                        <TextView
                            android:id="@+id/txtCallNow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/call_now"

                            android:textSize="@dimen/_10ssp" />

                        <ImageView
                            android:id="@+id/imageMakeCallCustomer"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_marginTop="5dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_baseline_phone_24" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/delivery_address"
                            android:textColor="#000000"
                            android:textSize="@dimen/_11ssp"

                            />

                        <TextView
                            android:id="@+id/txtListOrderDeliveryAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/saraibika_jaunpur_up_222202"
                            android:textSize="@dimen/_10ssp" />


                    </TableRow>


                </TableLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d3d3d3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/ordered_items"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="@dimen/_12ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d3d3d3" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView
                    android:id="@+id/txtNoCustomer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_weight="0.8"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="No."
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/txtItem_NameCustomer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_weight="3"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Item Name"
                    android:textAlignment="center"
                    android:textColor="#008000"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/txtQuanCustomer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_weight="2"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Quantity"
                    android:textAlignment="center"
                    android:textColor="#1589b6"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/txtPriceCustomer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_weight="2"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Price"
                    android:textAlignment="center"
                    android:textColor="#de4500"
                    android:textSize="@dimen/_14ssp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerOrderedSellerItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:reverseLayout="true"
                app:stackFromEnd="true"
                tools:listitem="@layout/list_single_row_seller_order" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>